--- a/frontend/index.html
+++ b/frontend/index.html
@@ -4,10 +4,9 @@
     <meta charset="utf-8">
     <title>Registration Form</title>
     <link rel="stylesheet" type="text/css" href="shift_up-registration.css">
+    <link href="https://fonts.googleapis.com/css?family=Montserrat|Open+Sans" rel="stylesheet">
   </head>
   <body>
-    <p>Hello Shift Up!</p>
-
     <form action="action_page.php">
   <div class="container" id="form">
    <div id="center">
